# portable-mlir-toolchain

./: .clang-format  .license-tools-config.json  .pre-commit-config.yaml  CHANGELOG.md  README.md
.github/: renovate.json5
.github/workflows/: build-mlir-linux-runner.yml  build-mlir-linux.yml  build-mlir-macos-runner.yml  build-mlir-macos.yml  build-mlir-windows-runner.yml  build-mlir-windows.yml  build-portable-mlir-toolchain.yml
scripts/toolchain/: common.sh
scripts/toolchain/linux/: build-mlir.sh  build-mold.sh  build-zstd.sh  build.sh  common.sh  in-container.sh  test-installation.sh
scripts/toolchain/macos/: build-mlir.sh  build-mold.sh  build-zstd.sh  build.sh  common.sh  test-installation.sh
scripts/toolchain/windows/: build-lld.ps1  build-mlir.ps1  build-mold.ps1  build-zstd.ps1  build.ps1  cleanup-runner.ps1  common.ps1  package-mlir.ps1  test-installation.ps1
tests/integration/: CMakeLists.txt  main.cpp
